[package]
name = "mal"
version = "0.1.9"
authors = ["Jordi Íñigo Griera"]
edition = "2024"

[lib]
name = "mal"
path = "lib.rs"

[dependencies]
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
fnv = { version = "1.0.6", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = ["alloc"] }
scanner = { git = "https://github.com/jig/scanner-rust", version = "0.1.1" }

[dev-dependencies]
rustyline = "17.0"
